# bnksound

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
assets/: io.github.borgenk.BnkSound.desktop
src/: app.rs  bus.rs  command_palette.rs  domain.rs  geometry.rs  lib.rs  main.rs  meter.rs  mpris.rs  profile.rs  screenshot.rs  settings.rs  state.rs  store.rs
src/pipewire_worker/: client.rs  default_meta.rs  device.rs  mod.rs  monitor.rs  node.rs  volume.rs
src/ui/: app_group.rs  css.rs  meter.rs  mod.rs  panels.rs  row.rs  theme.rs
src/xdg/: desktop_entry.rs  icons.rs  mod.rs
