[package]
name = "bnksound"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bnksound"
path = "src/main.rs"

[dependencies]
async-channel = "2"
gtk4 = { version = "0.11", default-features = false }
gdk4-wayland = { version = "0.11", default-features = false }
pipewire = "0.10"
libspa = "0.10"
libspa-sys = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = 1
strip = "debuginfo"
